--- a/pom.xml
+++ b/pom.xml
@@ -62,7 +62,6 @@
 			<version>7.22.0</version>
 			<scope>test</scope>
 		</dependency>
-		<!-- 🔥 JUnit Platform Suite -->
 		<dependency>
 			<groupId>org.junit.platform</groupId>
 			<artifactId>junit-platform-suite</artifactId>
@@ -79,6 +78,18 @@
 			<groupId>org.wiremock</groupId>
 			<artifactId>wiremock-standalone</artifactId>
 			<version>3.12.1</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.testcontainers</groupId>
+			<artifactId>testcontainers</artifactId>
+			<version>1.20.6</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.testcontainers</groupId>
+			<artifactId>junit-jupiter</artifactId>
+			<version>1.20.6</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
